Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h1>ALevoClient for Mac</h1>
-
-<p><strong>联想802.1x认证客户端 for Mac</strong>
-<br><br><img src="https://raw.github.com/iBcker/ALevoClient/master/products/icon.png" alt="Mou icon"><br><br></p>
+        <p><br><img src="https://raw.github.com/iBcker/ALevoClient/master/products/icon.png" alt="Mou icon"><br><br></p>
 
 <h2>摘要</h2>
 
